# nldl2026

./: .gitignore  pyproject.toml
configs/clip/dvm/: dvm_dino.json  dvm_dino_lora.json  dvm_resnet50.json
configs/clip/wells/: wells_dino.json  wells_dino_lora.json  wells_resnet50.json
configs/supervised/dvm/: dvm_clip_dino_frozen.json  dvm_clip_dino_lora.json  dvm_clip_dino_lora_frozen.json  dvm_clip_dino_lora_lora.json  dvm_clip_dino_lora_unfrozen.json  dvm_clip_dino_unfrozen.json  dvm_clip_resnet_frozen.json  dvm_clip_resnet_unfrozen.json  dvm_dino_frozen.json  dvm_dino_lora.json  dvm_dino_unfrozen.json  dvm_resnet50_frozen.json  dvm_resnet50_unfrozen.json
configs/supervised/wells/: wells_clip_dino_frozen.json  wells_clip_dino_lora.json  wells_clip_dino_lora_frozen.json  wells_clip_dino_lora_lora.json  wells_clip_dino_lora_unfrozen.json  wells_clip_dino_unfrozen.json  wells_clip_resnet_frozen.json  wells_clip_resnet_unfrozen.json  wells_dino_frozen.json  wells_dino_lora.json  wells_dino_unfrozen.json  wells_resnet50_frozen.json  wells_resnet50_unfrozen.json
notebooks/: create_dvm_fronts_dataset.ipynb  create_wells_dataset.ipynb
src/: train.py  validate.py
src/config/: base.py  data.py  experiments.py  factory.py  loader.py  losses.py  models.py  optimizers.py
src/data/: dvm.py  types.py  wells.py
src/experiments/: clip.py  supervised.py
src/models/: clip_model.py  linear_classifier.py  lora.py  tabular_encoder.py
src/training/: clip_module.py  contrastive_augmentations.py  data_module.py  logging.py  losses.py  supervised_module.py
